[tool.poetry]
name = "api-bookstore"
version = "0.1.0"
description = ""
authors = ["SkaDin <you@example.com>"]
readme = "README.md"
packages = [{include = "api_bookstore"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.7.0"
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
aiosqlite = "^0.19.0"
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 78